--- a/index.html
+++ b/index.html
@@ -14,17 +14,18 @@
 
 <body>
   <h1>Print Shop</h1>
-
-  <div id="display"></div>
-
-
-  <div class="container">
-    <!-- adding button and heading to show the digits -->
-    <!--increment() and decrement() functions on button click-->
-    <button id="increase">+</button>
-    <h2 id="counting"></h2>
-    <button id="decrease">-</button>
+  <div id="header"></div>
+  <div id="test">
+    <p></p>
   </div>
+  <div id="display"></div>
+  <!-- <details id="myDetails">
+    <summary>Copyright 1999-2014.</summary>
+    <p> - by Refsnes Data. All Rights Reserved.</p>
+    <p>All content and graphics on this web site are the property of the company Refsnes Data.</p>
+  </details> -->
+
+
 
   <script type="text/javascript" src="script.js"></script>
 </body>
