--- a/index.html
+++ b/index.html
@@ -13,19 +13,20 @@
 </head>
 
 <body>
-  <h1>Print Shop</h1>
-  <div id="header"></div>
-  <div id="test">
-    <p></p>
-  </div>
-  <div id="display"></div>
-  <!-- <details id="myDetails">
+  <div id="container">
+    <h1>Print Shop</h1>
+    <div id="header"></div>
+    <div id="test">
+      <p></p>
+    </div>
+    <div id="display"></div>
+    <!-- <details id="myDetails">
     <summary>Copyright 1999-2014.</summary>
     <p> - by Refsnes Data. All Rights Reserved.</p>
     <p>All content and graphics on this web site are the property of the company Refsnes Data.</p>
   </details> -->
 
-
+  </div>
 
   <script type="text/javascript" src="script.js"></script>
 </body>
