--- a/index.html
+++ b/index.html
@@ -8,23 +8,21 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://use.typekit.net/wco5sjn.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+
   <link href="style.css" rel="stylesheet" />
 
 </head>
 
 <body>
   <div id="container">
-    <h1>Print Shop</h1>
-    <div id="header"></div>
-    <div id="test">
-      <p></p>
+    <div id="header">
+
+      <h1>Print Shop</h1>
     </div>
     <div id="display"></div>
-    <!-- <details id="myDetails">
-    <summary>Copyright 1999-2014.</summary>
-    <p> - by Refsnes Data. All Rights Reserved.</p>
-    <p>All content and graphics on this web site are the property of the company Refsnes Data.</p>
-  </details> -->
+
 
   </div>
 
