--- a/index.html
+++ b/index.html
@@ -17,13 +17,10 @@
 
 <body>
   <div id="container">
-    <div id="header">
-
-      <h1>Print Shop</h1>
+    <div id="title">
     </div>
+    <div id="header"></div>
     <div id="display"></div>
-
-
   </div>
 
   <script type="text/javascript" src="script.js"></script>
